tools/gke-autopsc-controller/example/app.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: hello-internal
spec:
  parentRefs:
  - kind: Gateway
    name: internal-gw
  rules:
  - backendRefs:
    - name: hello-service
      port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
spec:
  containers:
  - name: hello
    image: nginx:stable
    ports:
      - containerPort: 80
        name: hello-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app.kubernetes.io/name: hello
  ports:
  - name: hello
    protocol: TCP
    port: 80
    targetPort: hello-web-svc
